# memnex

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  api-reference.md  architecture.md  comparison.md  deployment.md  eval.md  features.md  integration-guide.md  mcp.md  operator-guide.md  publishing.md  roadmap.md  security.md
src/memnex/: __init__.py  _time.py  client.py  config.py  server_config.py
src/memnex/api/: __init__.py  app.py  models.py
src/memnex/api/middleware/: auth.py  rate_limit.py
src/memnex/api/routes/: admin.py  customer.py  identity.py  memory.py
src/memnex/audit/: __init__.py  receipts.py  trace.py
src/memnex/channels/: __init__.py  app.py  base.py  sms.py  voice.py  web.py  whatsapp.py
src/memnex/cli/: __init__.py  main.py
src/memnex/concurrency/: __init__.py  bus.py  ledger.py  versions.py
src/memnex/eval/: __init__.py  runner.py
src/memnex/eval/datasets/: conflicting_facts.json  cross_channel_conversations.json  extended_recall.json  synthetic_identities.json
src/memnex/eval/suites/: conflict.py  extended_recall.py  handoff.py  (+4 more)
src/memnex/identity/: __init__.py  fuzzy.py  models.py  normalizer.py  resolver.py
src/memnex/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py  validation.py
src/memnex/memory/: __init__.py  compressor.py  conflict.py  embeddings.py  extractor.py  hybrid_extractor.py  manager.py  models.py  salience.py
src/memnex/privacy/: __init__.py  gdpr.py  masker.py  pii_detector.py  ttl.py
src/memnex/provenance/: __init__.py  filter.py  policy.py  wrapping.py
src/memnex/saas/: __init__.py  accounts.py  bootstrap.py  keys.py  routes.py
src/memnex/storage/: __init__.py  base.py  factory.py  memory_backend.py  postgres.py  qdrant.py  redis.py
src/memnex/workers/: __init__.py  compaction.py  identity_merge.py  privacy.py
tests/: conftest.py
tests/integration/: test_audit.py  test_chaos.py  test_cli_serve.py  test_concurrency.py  test_cross_channel_flow.py  test_gdpr_compliance.py  test_injection_deep.py  test_mcp_end_to_end.py  test_multi_tenant.py  test_provenance.py  test_saas.py  test_saas_http.py
tests/unit/: test_channel_adapters.py  test_conflict_resolver.py  test_fact_extractor.py  test_identity_resolver.py  test_mcp_fact_input.py  test_memory_manager.py  test_phone_normalizer.py  test_pii_detector.py  test_prompt_registry.py  test_receipt_kms.py  test_resource_router.py  test_salience_scorer.py
(+4 files in other folders)
